--- a/app/javascript/dashboard/i18n/locale/en/chatlist.json
+++ b/app/javascript/dashboard/i18n/locale/en/chatlist.json
@@ -137,6 +137,11 @@
     "HIDE_QUOTED_TEXT": "Hide Quoted Text",
     "SHOW_QUOTED_TEXT": "Show Quoted Text",
     "MESSAGE_READ": "Read",
-    "SENDING": "Sending"
+    "SENDING": "Sending",
+    "SUMMARY": {
+      "TITLE": "Generate Summary",
+      "LOADING": "Generating summary...",
+      "ERROR": "Failed to generate summary"
+    }
   }
 }
